# HoloMap

./: .gitignore  HoloMap_Run.bat  Manager.py  PC_Run.bat  PC_Run_Clients.bat  README.md  app.py  config.py  logger.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat
API/: base_datahandler.py  base_sql.py  camera_viewer.py  shared_state.py  socket.py
API/Calibration/: datahandler.py  routes.py  sql.py
API/Logging/: datahandler.py  routes.py  sql.py
API/Settings/: datahandler.py  routes.py  sql.py
Client/: .prettierrc  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
Client/public/: favicon-v1.psd  favicon-v2.psd  index.html
Client/src/: App.scss  App.tsx  index.scss  index.tsx
Client/src/Common/: Config.ts  Icons.tsx  blanks.ts  constants.ts  enumerations.ts  useMouseProperties.ts
Client/src/DataHandler/: handler.ts
Client/src/FormsData/: ExampleForm.ts
Client/src/Helpers/: useWindowDimensions.tsx
Client/src/Interfaces/: StateInterface.ts
Client/src/Pages/: Dashboard.tsx  (+2 more)
Common/: KalmanFilter.py  ModuleHelper.py  ModuleSharedState.py  Modules.py  ModulesHandler.py  Modules_Events.py  Modules_FailedAttempt.py  Modules_Handler.py  Plugins.py  SharedDataSingleton.py  helper.py
Common/Classes/: instance.py  processes.py  threads.py
Debugger/: .eslintignore  .eslintrc.js.old  package-lock.json  package.json
Debugger/public/: Logo-Ideas.psd
Debugger/src/: App.scss  App.tsx  index.tsx
Main/: main.py
Modules/Health/: main.py
Modules/Vision/: BoundaryBox.py  OutlierDetection.py  main.py
(+103 files in other folders)
